footer hr invisible issue solved but footer bg issue unsolved

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -463,7 +463,40 @@ nav{
     cursor: pointer;
 }
 
+/* footer styles */
 
+.footer-section{
+    background-color: white;
+    padding: 50px;
+    width: ;
+    
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+
+    gap: 32px;
+}
+
+.footer-title{
+    color: #0E0E0E;
+    font-size: 32px;
+    font-weight: 700;
+}
+
+hr {
+    width: 100%;  
+    height: 1px;  
+    border: none;
+
+    background-color: rgba(14, 14, 14, 0.1); 
+    
+}
+
+.footer-img-container{
+    display: flex;
+    gap: 23px;
+}
 
 
 
